[package]
name = "dht-logger"
version = "0.1.0"
authors = ["Rachel Domagalski <rsdomagalski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
itertools = "0.10"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serialport = "4.0"

[dev-dependencies]
portpicker = "0.1"
