[package]
name = "dht-logger"
description = "Read DHT sensor data formatted in JSON over a serial interface and log it."
documentation = "https://docs.rs/dht-logger"
repository = "https://github.com/domagalski/dht-logger-rs"
homepage = "https://github.com/domagalski/dht-logger-rs"
keywords = ["dht", "dht22", "dht11", "sensors",  "serial"]
categories = ["command-line-utilities", "encoding", "parsing"]
readme = "README.md"
license = "MIT"
version = "0.1.1"
authors = ["Rachel Domagalski"]
edition = "2018"
default_run = ["dht-logger"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serialport = "4.0"

[dev-dependencies]
portpicker = "0.1"
